--- a/index.html
+++ b/index.html
@@ -11,6 +11,35 @@
         <title>Four Card Feature</title>
     </head>
     <body>
-        
+        <main class = "canvas">
+            <div class = "container">
+                <div class = "intro">
+                    <h1 class = "intro-title">Reliable, efficient delivery <span class = "bold">Powered by Technology</span></h1>
+                    <p class = "intro-paragraph">Our Artificial Intelligence powered tools <span class = "second-line-paragraph">use millions of project data points to</span> <span class = "third-line-paragraph">ensure that your project is successful</span></p>
+                </div>
+                <div class = "cards">
+                    <div class = "supervisor-card">
+                        <h1 class = "supervisor-title">Supervisor</h1>
+                        <p class = "supervisor-function">Monitors activity to identify project roadblocks</p>
+                        <img class = "icon-supervisor" src = "images/icon-supervisor.svg" alt = "">
+                    </div>
+                    <div class = "team-builder-card">
+                        <h1 class = "team-builder-title">Team Builder</h1>
+                        <p class = "team-builder-function">Scans our talent network to create the optimal team for your project</p>
+                        <img class = "icon-team-builder" src = "images/icon-team-builder.svg" alt = "">
+                    </div>
+                    <div class = "karma-card">
+                        <h1 class = "karma-title">Karma</h1>
+                        <p class = "karma-function">Regularly evaluates our talent to ensure quality</p>
+                        <img class = "icon-karma" src = "images/icon-karma.svg" alt = "">
+                    </div>
+                    <div class = "calculator-card">
+                        <h1 class = "calculator-title">Calculator</h1>
+                        <p class = "calculator-function">Uses data from past projects to provide better delivery estimates</p>
+                        <img class = "icon-calculator" src = "images/icon-calculator.svg" alt = "">
+                    </div>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
